# sql-composer

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  WARP.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
sql_composer/: db_conditions.py  db_metadata.py  db_models.py  sql_composer.py  sql_composer_pg.py  sql_translator.py
sql_composer/pg/: pg_data_types.py  pg_filter_op.py  pg_translator.py
sql_composer_tests/: main.py  parameterized_query_test.py  pg_translator_test.py  postgres_db.py  sql_composer_pg_test.py
