[project]
name = "sql-composer"
version = "0.1.0"
description = "A compose for SQL"
authors = [
    {name = "Aaron Lee",email = "leeaaron326@gmail.com"}
]
license = {text = "Apache 2.0 License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
