[project]
name = "sql-composer"
version = "0.1.0"
description = "A compose for SQL"
authors = [
    {name = "Aaron Lee",email = "leeaaron326@gmail.com"}
]
license = {text = "Apache 2.0 License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
